--- a/index.html
+++ b/index.html
@@ -8,92 +8,114 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css">
+    <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-   <header>
-        <nav>
-            <a class="logo link linkk" href="./index.html">Web<span class="logo-studio link linkk">Studio</span></a>
-            <ul class="list">
-                <li><a class="header-nav link active" href="./index.html" target="_self">Studio</a></li>
-                <li><a class="header-nav link active" href="./portfolio.html" target="_self">Portfolio</a></li>
-                <li><a class="header-nav link active" href="">Contacts</a></li>
-            </ul>
-        </nav>
-        <address class="header-contact">
-            <ul class="list">
-                <li><a class="contact link active" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="contact link active" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-            </ul>
-        </address>
+   <header class="header">
+        <div class="container">
+            <nav class="nav">
+                <a class="logo link linkk" href="./index.html">Web<span class="logo-studio link linkk">Studio</span></a>
+                <ul class="list">
+                    <li class="item"><a class="header-nav link active" href="./index.html" target="_self">Studio</a></li>
+                    <li class="item"><a class="header-nav link active" href="./portfolio.html" target="_self">Portfolio</a></li>
+                    <li class="item"><a class="header-nav link active" href="">Contacts</a></li>
+                </ul>
+            </nav>
+            <address class="header-contact">
+                <ul class="list">
+                    <li><a class="contact link active" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a class="contact link active" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                </ul>
+            </address>
+        </div>
    </header>
    <main>
     <!--Effective Solutions for Your Business-->
     <section class="title-bg">
-        <h1 class="title">Effective Solutions for Your Business</h1>
-        <button type="button" class="order-btn btn-active">Order Service</button>
+        <div class="container">
+            <h1 class="title">Effective Solutions for Your Business</h1>
+            <button type="button" class="order-btn btn-active">Order Service</button>
+        </div>
     </section>
     <!--description of benefits-->
     <section>
-        <h2 style="display:none" class="h-future">Lorem, ipsum dolor.</h2>
-        <ul class="list">
-            <li>
-                <h3 class="h-categ">Strategy</h3>
-                <p class="text-benef">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
-            </li>
-            <li>
-                <h3 class="h-categ">Punctuality</h3>
-                <p class="text-benef">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-            </li>
-            <li>
-                <h3 class="h-categ">Diligence</h3>
-                <p class="text-benef">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-            </li>
-            <li>
-                <h3 class="h-categ">Technologies</h3>
-                <p class="text-benef">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-            </li>
-        </ul>
+        <div class="container">
+            <h2 hidden class="h-future">Lorem, ipsum dolor.</h2>
+            <ul class="list">
+                <li>
+                    <h3 class="h-categ">Strategy</h3>
+                    <p class="text-benef">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
+                </li>
+                <li>
+                    <h3 class="h-categ">Punctuality</h3>
+                    <p class="text-benef">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                </li>
+                <li>
+                    <h3 class="h-categ">Diligence</h3>
+                    <p class="text-benef">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                </li>
+                <li>
+                    <h3 class="h-categ">Technologies</h3>
+                    <p class="text-benef">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                </li>
+            </ul>
+        </div>
     </section>
     <!--What are we doing-->
     <section>
-       <h2 class="h-doing">What are we doing</h2>
-        <ul class="list">
-            <li><img src="./images/monitor.jpg" alt="Monitor PC" width="360" height="300"></li>
-            <li><img src="./images/phone.jpg" alt="Phone" width="360" height="300"></li>
-            <li><img src="./images/monphone.jpg" alt="Laptop and Phone" width="360" height="300"></li>
-        </ul>
+        <div class="container">
+            <h2 class="h-doing">What are we doing</h2>
+            <ul class="list">
+                <li><img src="./images/monitor.jpg" alt="Monitor PC" width="360" height="300"></li>
+                <li><img src="./images/phone.jpg" alt="Phone" width="360" height="300"></li>
+                <li><img src="./images/monphone.jpg" alt="Laptop and Phone" width="360" height="300"></li>
+            </ul>
+        </div>
     </section>
     <!--Our Team-->
     <section class="team">
-        <h2 class="h-team">Our Team</h2>
-        <ul class="list">
-            <li class="list-team">
-                <img src="./images/mark.jpg" alt="Photo Mark Guerrero" width="264" height="260">
-                <h3 class="h-categ">Mark Guerrero</h3>
-                <p class="text-team">Product Designer</p>
-            </li>
-            <li class="list-team">
-                <img src="./images/tom.jpg" alt="Photo Tom Ford" width="264" height="260">
-                <h3 class="h-categ">Tom Ford</h3>
-                <p class="text-team">Frontend Developer</p>
-            </li>
-            <li class="list-team">
-                <img src="./images/camila.jpg" alt="Photo Camila Garcia" width="264" height="260">
-                <h3 class="h-categ">Camila Garcia</h3>
-                <p class="text-team">Marketing</p>
-            </li>
-            <li class="list-team">
-                <img src="./images/daniel.jpg" alt="Photo Daniel Wilson" width="264" height="260">
-                <h3 class="h-categ">Daniel Wilson</h3>
-                <p class="text-team">UI Designer</p>
-            </li>
-        </ul>
+        <div class="container">
+            <h2 class="h-team">Our Team</h2>
+            <ul class="list">
+                <li class="list-team">
+                    <img src="./images/mark.jpg" alt="Photo Mark Guerrero" width="264" height="260">
+                    <div class="conteiner-team">
+                        <h3 class="h-categ">Mark Guerrero</h3>
+                        <p class="text-team">Product Designer</p>
+                    </div>
+                </li>
+                <li class="list-team">
+                    <img src="./images/tom.jpg" alt="Photo Tom Ford" width="264" height="260">
+                    <div class="conteiner-team">
+                        <h3 class="h-categ">Tom Ford</h3>
+                        <p class="text-team">Frontend Developer</p>
+                    </div>
+                </li>
+                <li class="list-team">
+                    <img src="./images/camila.jpg" alt="Photo Camila Garcia" width="264" height="260">
+                    <div class="conteiner-team">
+                        <h3 class="h-categ">Camila Garcia</h3>
+                        <p class="text-team">Marketing</p>
+                    </div>
+                </li>
+                <li class="list-team">
+                    <img src="./images/daniel.jpg" alt="Photo Daniel Wilson" width="264" height="260">
+                    <div class="conteiner-team">
+                        <h3 class="h-categ">Daniel Wilson</h3>
+                        <p class="text-team">UI Designer</p>
+                    </div>
+                </li>
+            </ul>
+        </div>
     </section>
    </main>
    <footer class="footer">
-        <a href="./index.html" class="logo link linkk">Web<span class="logo-studio-foot link linkk">Studio</span></a>
-        <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <div class="container">
+            <a href="./index.html" class="logo link linkk">Web<span class="logo-studio-foot link linkk">Studio</span></a>
+            <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        </div>
    </footer>
 </body>
 </html>
