--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
         <div class="container">
             <nav class="nav">
                 <a class="logo link linkk" href="./index.html">Web<span class="logo-studio link linkk">Studio</span></a>
-                <ul class="list">
+                <ul class="nav-li">
                     <li class="item"><a class="header-nav link active" href="./index.html" target="_self">Studio</a></li>
                     <li class="item"><a class="header-nav link active" href="./portfolio.html" target="_self">Portfolio</a></li>
                     <li class="item"><a class="header-nav link active" href="">Contacts</a></li>
                 </ul>
             </nav>
             <address class="header-contact">
-                <ul class="list">
+                <ul class="addr">
                     <li><a class="contact link active" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                     <li><a class="contact link active" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
                 </ul>
@@ -40,23 +40,23 @@
         </div>
     </section>
     <!--description of benefits-->
-    <section>
+    <section class="sec-benef">
         <div class="container">
-            <h2 hidden class="h-future">Lorem, ipsum dolor.</h2>
+            <h2 class="visually-hidden" class="h-future">Description of benefits</h2>
             <ul class="list">
-                <li>
+                <li class="li-benef">
                     <h3 class="h-categ">Strategy</h3>
                     <p class="text-benef">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
                 </li>
-                <li>
+                <li class="li-benef">
                     <h3 class="h-categ">Punctuality</h3>
                     <p class="text-benef">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
-                <li>
+                <li class="li-benef">
                     <h3 class="h-categ">Diligence</h3>
                     <p class="text-benef">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                 </li>
-                <li>
+                <li class="li-benef">
                     <h3 class="h-categ">Technologies</h3>
                     <p class="text-benef">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
@@ -64,7 +64,7 @@
         </div>
     </section>
     <!--What are we doing-->
-    <section>
+    <section class="sec-doing">
         <div class="container">
             <h2 class="h-doing">What are we doing</h2>
             <ul class="list">
