--- a/portfolio.html
+++ b/portfolio.html
@@ -13,30 +13,30 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header>
+   <header class="header">
         <div class="container">
-            <nav>
+            <nav class="nav">
                 <a class="logo link linkk" href="./index.html">Web<span class="logo-studio link linkk">Studio</span></a>
-                <ul class="list">
-                    <li><a class="header-nav link active" href="./index.html" target="_self">Studio</a></li>
-                    <li><a class="header-nav link active" href="./portfolio.html" target="_self">Portfolio</a></li>
-                    <li><a class="header-nav link active" href="">Contacts</a></li>
+                <ul class="nav-li">
+                    <li class="item"><a class="header-nav link active" href="./index.html" target="_self">Studio</a></li>
+                    <li class="item"><a class="header-nav link active" href="./portfolio.html" target="_self">Portfolio</a></li>
+                    <li class="item"><a class="header-nav link active" href="">Contacts</a></li>
                 </ul>
             </nav>
             <address class="header-contact">
-                <ul class="list">
+                <ul class="addr">
                     <li><a class="contact link active" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                     <li><a class="contact link active" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
                 </ul>
             </address>
         </div>
-    </header>
+   </header>
     <main>
-        <section>
+        <section class="portfolio-sec">
             <div class="container">
-                <h1 hidden>Lorem ipsum dolor sit.</h1>
+                <h1 class="visually-hidden">Category portfolio</h1>
                 <!--Filter category-->
-                <ul class="list">
+                <ul class="list filt-ul">
                     <li><button type="button" class="filt-btn btn-active">All</button></li>
                     <li><button type="button" class="filt-btn btn-active">Web Site</button></li>
                     <li><button type="button" class="filt-btn btn-active">App</button></li>
