--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
    <header class="header">
-        <div class="container">
+        <div class="container h-contein">
             <nav class="nav">
                 <a class="logo link linkk" href="./index.html">Web<span class="logo-studio link linkk">Studio</span></a>
                 <ul class="nav-li">
@@ -42,7 +42,7 @@
     <!--description of benefits-->
     <section class="sec-benef">
         <div class="container">
-            <h2 class="visually-hidden" class="h-future">Description of benefits</h2>
+            <h2 class="visually-hidden h-future">Description of benefits</h2>
             <ul class="list">
                 <li class="li-benef">
                     <h3 class="h-categ">Strategy</h3>
@@ -113,7 +113,7 @@
    </main>
    <footer class="footer">
         <div class="container">
-            <a href="./index.html" class="logo link linkk">Web<span class="logo-studio-foot link linkk">Studio</span></a>
+            <a href="./index.html" class="logo link linkk logof">Web<span class="logo-studio-foot link linkk">Studio</span></a>
             <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>
    </footer>
