--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
                 </ul>
                 <!--Categories-->
                 <ul class="categories list">
-                    <li>
+                    <li class="categ-li">
                         <a class="category-link link" href=""><img src="./images/bankapp.jpg" alt="Banking app interface" width="360" height="300">
                             <div class="container-categ">
                                 <h2 class="h-categ">Banking App Interface Concept</h2>
