fix: oter errors

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
         <div class="container">
             <h2 class="h-doing">What are we doing</h2>
             <ul class="list">
-                <li><img src="./images/monitor.jpg" alt="Monitor PC" width="360" height="300"></li>
-                <li><img src="./images/phone.jpg" alt="Phone" width="360" height="300"></li>
-                <li><img src="./images/monphone.jpg" alt="Laptop and Phone" width="360" height="300"></li>
+                <li class="li-doing"><img src="./images/monitor.jpg" alt="Monitor PC" width="360" height="300"></li>
+                <li class="li-doing"><img src="./images/phone.jpg" alt="Phone" width="360" height="300"></li>
+                <li class="li-doing"><img src="./images/monphone.jpg" alt="Laptop and Phone" width="360" height="300"></li>
             </ul>
         </div>
     </section>
