--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 </head>
 <body>
    <header class="header">
-        <div class="container">
+        <div class="container h-contein">
             <nav class="nav">
                 <a class="logo link linkk" href="./index.html">Web<span class="logo-studio link linkk">Studio</span></a>
                 <ul class="nav-li">
@@ -53,7 +53,7 @@
                             </div>
                         </a>
                     </li>
-                    <li>
+                    <li class="categ-li">
                         <a class="category-link link" href=""><img src="./images/cashpay.jpg" alt="Payment by phone" width="360" height="300">
                             <div class="container-categ">
                                 <h2 class="h-categ">Cashless Payment</h2>
@@ -61,7 +61,7 @@
                             </div>
                         </a>
                     </li>
-                    <li>
+                    <li class="categ-li">
                         <a class="category-link link" href=""><img src="./images/maditapp.jpg" alt="Laptop and phone with Meditation App" width="360" height="300">
                             <div class="container-categ">
                                 <h2 class="h-categ">Meditation App</h2>
@@ -69,7 +69,7 @@
                             </div>
                         </a>
                     </li>
-                    <li>
+                    <li class="categ-li">
                         <a class="category-link link" href=""><img src="./images/taxiserv.jpg" alt="Driver in the car" width="360" height="300">
                             <div class="container-categ">
                                 <h2 class="h-categ">Taxi Service</h2>
@@ -77,7 +77,7 @@
                             </div>
                         </a>
                     </li>
-                    <li>
+                    <li class="categ-li">
                         <a class="category-link link" href=""><img src="./images/screenillust.jpg" alt=" Phone with screen illustrations" width="360" height="300">
                             <div class="container-categ">
                                 <h2 class="h-categ">Screen Illustrations</h2>
@@ -85,7 +85,7 @@
                             </div>
                         </a>
                     </li>
-                    <li>
+                    <li class="categ-li">
                         <a class="category-link link" href=""><img src="./images/onlainecors.jpg" alt="Happy girl with phone" width="360" height="300">
                             <div class="container-categ">
                                 <h2 class="h-categ">Online Courses</h2>
@@ -93,7 +93,7 @@
                             </div>
                         </a>
                     </li>
-                    <li>
+                    <li class="categ-li">
                         <a class="category-link link" href=""><img src="./images/instagstories.jpg" alt="Screens instagram srories" width="360" height="300">
                             <div class="container-categ">
                                 <h2 class="h-categ">Instagram Stories Concept</h2>
@@ -101,7 +101,7 @@
                             </div>
                         </a>
                     </li>
-                    <li>
+                    <li class="categ-li">
                         <a class="category-link link" href=""><img src="./images/organfood.jpg" alt="Bag with organic food" width="360" height="300">
                             <div class="container-categ">
                                 <h2 class="h-categ">Organic Food</h2>
@@ -109,7 +109,7 @@
                             </div>
                         </a>
                     </li>
-                    <li>
+                    <li class="categ-li">
                         <a class="category-link link" href=""><img src="./images/coffee.jpg" alt="Cup of coffee" width="360" height="300">
                             <div class="container-categ">
                                 <h2 class="h-categ">Fresh Coffee</h2>
@@ -123,7 +123,7 @@
     </main>
     <footer class="footer">
         <div class="container">
-            <a href="./index.html" class="logo link linkk">Web<span class="logo-studio-foot link linkk">Studio</span></a>
+            <a href="./index.html" class="logo link linkk logof">Web<span class="logo-studio-foot link linkk">Studio</span></a>
             <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>
     </footer>
