--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
    </main>
    <footer class="footer">
         <div class="container">
-            <a href="./index.html" class="logo link linkk logof">Web<span class="logo-studio-foot link linkk">Studio</span></a>
+            <a href="./index.html" class="link linkk logof">Web<span class="logo-studio-foot link linkk">Studio</span></a>
             <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>
    </footer>
